k8s/load-gen.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sh", "-c", "while true; do wget -q -O- http://task-backend-service.default.svc.cluster.local:5000; done"]
